Actions
Bug #12120
closedpower: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
powerd.c:312:7: error: cast between incompatible function types from 'void (*)(void *)' to 'void * (*)(void *)' [-Werror=cast-function-type] (void *(*)(void *))power_button_monitor, NULL, ^ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 45057a1a493b60c956248b11e538feed43fdc7b6
commit 45057a1a493b60c956248b11e538feed43fdc7b6 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-27T17:25:15.000Z 12120 power: cast between incompatible function types Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions